<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="20dp"
    tools:context="vn.asiantech.internship.ui.login.SignUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/textview_memo_info_enter"
        android:textColor="@android:color/background_dark"
        android:textSize="15dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_austra_flag" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_drop_down" />

        <EditText
            android:id="@+id/edtEnterPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edt_bottom_gray"
            android:hint="@string/edt_hint_enter_number"
            android:inputType="phone"
            android:textSize="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edt_bottom_gray"
        android:hint="@string/edt_hint_username"
        android:inputType="text"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edt_bottom_gray"
        android:hint="@string/edt_hint_password"
        android:inputType="textPassword"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <CheckBox
            android:id="@+id/chkTermAccept"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:button="@drawable/bg_chk_term_accept"
            android:scaleX="1.7"
            android:scaleY="1.7" />

        <TextView
            android:id="@+id/tvReadAndAgreeTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview_memo_term"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/selecter_btn_next" />

</LinearLayout>
