<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="vn.asiantech.internship.ui.unittest.UnitTestActivity">

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_submit" />
</LinearLayout>
